--- a/pom.xml
+++ b/pom.xml
@@ -16,6 +16,7 @@
 
 	    <properties>
 	        <java.version>17</java.version>
+	        <junit-jupiter.version>5.9.3</junit-jupiter.version>
 	    </properties>
 
 	    <dependencies>
@@ -92,6 +93,45 @@
 	            <plugin>
 	                <groupId>org.springframework.boot</groupId>
 	                <artifactId>spring-boot-maven-plugin</artifactId>
+	            </plugin>
+	            <plugin>
+	                <groupId>org.jacoco</groupId>
+	                <artifactId>jacoco-maven-plugin</artifactId>
+	                <version>0.8.8</version>
+	                <executions>
+	                    <execution>
+	                        <goals>
+	                            <goal>prepare-agent</goal>
+	                        </goals>
+	                    </execution>
+	                    <execution>
+	                        <id>report</id>
+	                        <phase>test</phase>
+	                        <goals>
+	                            <goal>report</goal>
+	                        </goals>
+	                    </execution>
+	                </executions>
+	            </plugin>
+	            <plugin>
+	                <groupId>org.apache.maven.plugins</groupId>
+	                <artifactId>maven-compiler-plugin</artifactId>
+	                <version>3.11.0</version>
+	                <configuration>
+	                    <source>${java.version}</source>
+	                    <target>${java.version}</target>
+	                </configuration>
+	            </plugin>
+	            <plugin>
+	                <groupId>org.apache.maven.plugins</groupId>
+	                <artifactId>maven-surefire-plugin</artifactId>
+	                <version>3.1.2</version>
+	                <configuration>
+	                    <includes>
+	                        <include>**/*Test.java</include>
+	                        <include>**/*Tests.java</include>
+	                    </includes>
+	                </configuration>
 	            </plugin>
 	        </plugins>
 	    </build>
