--- a/pom.xml
+++ b/pom.xml
@@ -99,11 +99,8 @@
 	<distributionManagement>
 		<snapshotRepository>
 			<id>nexus-snapshots</id>
+			<!-- Use the DIRECT repository URL (not admin UI) -->
 			<url>http://localhost:8081/repository/maven-snapshots/</url>
 		</snapshotRepository>
-		<repository>
-			<id>nexus-releases</id>
-			<url>http://localhost:8081/repository/maven-snapshots/</url>
-		</repository>
 	</distributionManagement>
 	</project>
