--- a/pom.xml
+++ b/pom.xml
@@ -134,6 +134,11 @@
 	                    </includes>
 	                </configuration>
 	            </plugin>
+	            <plugin>
+	                <groupId>com.github.spotbugs</groupId>
+	                <artifactId>spotbugs-maven-plugin</artifactId>
+	                <version>4.7.3.5</version>
+	            </plugin>
 	        </plugins>
 	    </build>
 	<distributionManagement>
